--- a/README
+++ b/README
@@ -1,3 +1,15 @@
+These syllables were recorded by Cameron Wong
+for the Ekho program.
+
+You can redistribute and/or modify these recordings under the terms of
+the GNU General Public License as published by the Free Software
+Foundation; either version 3 of the License, or (at your option) any
+later version.
+
+These recordings are distributed in the hope that they will be useful,
+but WITHOUT ANY WARRANTY; without even the implied warranty of
+MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
+General Public License for more details.
 cameron-voice.exe is a zip file that must be
 compatible with unzip on non-Windows platforms
 as well as being self-extracting.
@@ -7,4 +19,4 @@ unzipsfx.exe is a Win32 build of unzipsfx
 CHEAP_SFX_AUTORUN defined, and hacked process.c
 so it doesn't confirm the Auto-run command.
 
-Use 'make' to makke a new cameron-voice.exe from the WAVs.
+Use 'make' to make a new cameron-voice.exe from the WAVs.
